# Friction-Surrogate-XAI

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: datasets.yaml  discretization.yaml  eda.yaml  evaluation.yaml  experiments.yaml  final_pipeline.yaml  final_pipeline_smoke.yaml  logging.yaml  mlflow.yaml  modeling.yaml  optimization.yaml  pipelines.yaml  preprocessing.yaml  project.yaml  statistical_comparison.yaml  uncertainty.yaml  xai.yaml
data/: README.md
data/raw/: README.md
evaluation/: README.md
experiments/: README.md  run_discretization.py  run_eda.py  run_final_pipeline.py  run_hyperparameter_optimization.py  run_overfitting_audit.py  run_preprocessing.py  run_statistical_comparison.py  run_uncertainty.py  run_xai.py
models/: README.md
notebooks/: README.md
notebooks/eda/: README.md
notebooks/modeling/: README.md
pipelines/: README.md
preprocessing/: README.md
reports/: README.md
reports/discretization/: README.md
reports/eda/: README.md
reports/evaluation/: README.md
reports/final_pipeline/: README.md
reports/optimization/: README.md
reports/preprocessing_artifacts/: README.md
reports/statistical_comparison/: README.md
tests/: conftest.py  test_data_layer.py  test_discretization.py  test_eda.py  test_evaluation.py  test_final_pipeline.py  test_modeling_overfitting.py  test_optimization.py  test_preprocessing.py  test_skeleton.py  test_statistical_comparison.py  test_uncertainty.py  test_xai.py
uncertainty/: README.md
utils/: README.md
visualization/: README.md
xai/: README.md
(+108 files in other folders)
