[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "friction-surrogate-xai"
version = "0.1.0"
description = "Research skeleton for reliable XAI surrogate modeling on small friction-processed composite datasets."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Pouyan Delivandani" }
]
dependencies = [
  "numpy>=1.26,<3.0",
  "pandas>=2.1,<3.0",
  "scikit-learn>=1.4,<2.0",
  "scipy>=1.11,<2.0",
  "mlflow>=2.12,<4.0",
  "optuna>=3.6,<5.0",
  "shap>=0.45,<1.0",
  "lime>=0.2.0.1,<1.0",
  "treeinterpreter>=0.2.3,<1.0",
  "xgboost>=2.0,<4.0",
  "lightgbm>=4.3,<5.0",
  "openpyxl>=3.1,<4.0",
  "matplotlib>=3.8,<4.0",
  "seaborn>=0.13,<1.0",
  "statsmodels>=0.14,<1.0",
  "scikit-posthocs>=0.9,<1.0",
  "PyYAML>=6.0,<7.0",
  "joblib>=1.3,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
  "black>=24.0,<26.0",
  "ipykernel>=6.29,<7.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
